Fix text wrap for chat messages

--- a/frontend/src/styles/components/chat.css
+++ b/frontend/src/styles/components/chat.css
@@ -8,18 +8,25 @@
     justify-end
     transition-all
     overflow-y-auto
+    overflow-x-hidden
   ;
 }
 
 .chat-message {
   @apply
-    flex
+    inline
     flex-row
     space-x-1
     text-white
     justify-start
+    w-fit
   ;
 }
+
+.chat-username {
+  @apply h-fit w-fit;
+}
+
 
 .chat-username::after {
   content: ':';
@@ -79,5 +86,9 @@
 }
 
 .chat-guess {
-  @apply text-white;
+  @apply
+    h-fit
+    text-white
+    whitespace-normal
+    w-full;
 }
